sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:13: error: not found: value gap
      while (j>= gap && (getValeur(j-ecart)>valeur))
                 ^AlgShellSort:15: error: not found: value copier
       copier(j-ecart,j)
       ^